# noether

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  collisions.cpp  collisions.hpp  main.cpp  primitives.cpp  primitives.hpp  world.cpp  world.hpp
src/physics/: collisions.hpp  config.hpp  object.cpp  object.hpp  primitives.cpp  primitives.hpp  world.cpp  world.hpp
src/render/: object.hpp  pipeline.hpp  render.hpp
src/window/: app.cpp  app.hpp  window.cpp  window.hpp
